Fixed misaligned footer

--- a/css/Primary.css
+++ b/css/Primary.css
@@ -45,6 +45,7 @@ body {
     width:100%;
     text-align:center;
     padding: 0.5em 0em 0.5em 0em;
+    float: left;
 }
 
 .Layout16_header a {
